--- a/resources/style/main.css
+++ b/resources/style/main.css
@@ -4,10 +4,20 @@ html {
     width: 100%;
   }
   #mainContainer{
-    padding-top: 30px;
+    /* background-color: orange; */
+    padding-top: 0px;
     display: grid;
     place-content: space-around-center;
   }
+  .nav{
+    /* background-color: yellow; */
+    position: relative;
+    justify-content: left;
+    font-size: 24px;
+    margin: 0 auto;
+    width: 100%;
+  }
+
   #list{
     padding-top: 5%;
   }
@@ -27,10 +37,23 @@ html {
     color: white;
   }
   #qContainer{
-    width: 450px;
+    /* background-color: red; */
+    margin: 0 auto;
+    position: relative;
+    text-align: center;
+    width: 100%;
     height: 350px;
   }
   #aContainer{
-    width: 500px;
-    height: 200px;
+    /* background-color: blue; */
+    position: relative;
+    text-align: center;
+    justify-content: center;
+    margin: 0 auto;
+    width: 100%;
+    height: 150px;
+  }
+  #buttonContainer{
+    width: 100%;
+    margin: 0 auto;
   }
