--- a/resources/style/main.css
+++ b/resources/style/main.css
@@ -44,20 +44,22 @@ html {
   }
   #qContainer{
     /* background-color: red; */
-    margin: 0 auto;
+    /* margin: 0 auto;
     position: relative;
     text-align: center;
     width: 100%;
     height: 180px;
+    padding: 0px; */
   }
   #aContainer{
     /* background-color: blue; */
-    position: relative;
+    /* position: relative;
     text-align: center;
     justify-content: center;
     margin: 0 auto;
     width: 100%;
     height: 180px;
+    padding: 0px; */
   }
   #buttonContainer{
     width: 100%;
